# lazycreatives-backups

./: .gitignore  .nojekyll  README.md  index.html  pitch-video.html  pricing.html
backend/: README.md  pyproject.toml
backend/ablebackup/: als_parser.py  backup_engine.py  catalog.py  cli.py  entitlement.py  genre.py  hashing.py  locator.py  models.py  resolver.py  scanner.py  scheduler.py  server.py  service.py  verifier.py
backend/ablebackup/api/: app.py  auth.py  progress.py  schemas.py
backend/ablebackup/daws/: __init__.py  ableton.py  base.py  dawproject.py  flp.py  flstudio.py  reaper.py  registry.py
backend/tests/: helpers.py  test_adapters.py  test_als_parser.py  test_api_auth.py  test_api_history.py  test_api_overview.py  test_api_scan_backup.py  test_api_settings.py  test_api_ws_progress.py  test_backup_engine.py  test_catalog.py  test_dawproject.py  test_entitlement.py  test_flstudio.py  test_hashing.py  test_helpers.py  test_integration.py  test_locator.py  test_mirror.py  test_models.py  test_portable.py  test_progress.py  test_reaper.py  test_resolver.py  test_restore.py  test_scanner.py  test_scheduler.py  test_server.py  test_service.py  test_smoke.py  test_verifier.py
brand/: brand-guide.html
electron/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
electron/electron/: main.js  preload.js  sidecar.js  tray.js
electron/src/: App.tsx  api.ts  entitlement.tsx  format.ts  main.tsx  theme.css  types.ts  useProgress.ts
electron/test/: api.test.ts  sidecar.test.ts  useProgress.test.ts
(+24 files in other folders)
