[project]
name = "ablebackup"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12",  # uvicorn needs a WS library to serve /ws/progress live
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
